# image_registration

./: pyproject.toml
notebooks/: geolocalisation_chatgpt.ipynb  geolocalisation_streetclip.ipynb
src/: mask_visualization.py  setup_device.py
