[project]
name = "01-coastsnap"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "einops>=0.8.1",
    "geopandas>=1.1.1",
    "imutils>=0.5.4",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "openai>=1.93.0",
    "opencv-python>=4.11.0.86",
    "pandas>=2.3.0",
    "sam-2",
    "supervision>=0.25.1",
    "timm>=1.0.16",
    "torch>=2.7.1",
    "torchaudio>=2.7.1",
    "torchvision>=0.22.1",
    "transformers[torch]>=4.53.1",
]

[tool.uv.sources]
sam-2 = { git = "https://github.com/facebookresearch/sam2", branch = "main" }
